frontend/test/should_fail/index_exec_node_isInFromIndexSame_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:short)
{
	{ i=isInNodesFromIndexSame(::n, fooi, 42) }
}
